<resources>
    <string name="app_name">Xtreme</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Browse</string>
    <string name="title_notifications">Profile</string>
    <string name="title_activity_video">VideoActivity</string>
    <string name="media_url_mp4">https://storage.googleapis.com/exoplayer-test-media-0/BigBuckBunny_320x180.mp4</string>
    <string name="title_activity_try">TryActivity</string>


    <string name="text_no_connectivity">No Connection</string>
    <string name="text_connectivity">Back Online</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_try_login">Sign in</string>

</resources>
