<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.xtreme.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action android:id="@+id/action_navigation_home_to_navigation_dashboard" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.xtreme.ui.browse.BrowseFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_browse" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.xtreme.ui.profile.ProfileFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.example.xtreme.ui.profile.LoginFragment"
        android:label="login_fragment"
        tools:layout="@layout/fragment_login" />
</navigation>