<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="loginViewModel"
            type="com.example.xtreme.ui.profile.LoginViewModel" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/loginFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

<TextView
    android:id="@+id/text"
    style="?android:attr/listSeparatorTextViewStyle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:layout_marginTop="32dp"
    android:gravity="center"
    android:text="Welcome Back"
    android:textColor="@color/colorWhite"
    android:textSize="20sp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.099"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

<EditText
    android:text="@={loginViewModel.email}"
    android:id="@+id/edtxt_login_email"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="52dp"
    android:layout_marginEnd="24dp"
    android:autofillHints="email"
    android:hint="@string/prompt_email"
    android:inputType="textEmailAddress"
    android:selectAllOnFocus="true"
    android:textColor="@color/colorWhite"
    android:textColorHint="@color/colorGrey"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/text" />

<EditText
    android:text="@={loginViewModel.password}"
    android:id="@+id/edtxt_login_password"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="24dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="24dp"
    android:hint="@string/prompt_password"
    android:textColor="@color/colorWhite"
    android:textColorHint="@color/colorGrey"
    android:imeActionLabel="@string/action_sign_in_short"
    android:imeOptions="actionDone"
    android:inputType="textPassword"
    android:selectAllOnFocus="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edtxt_login_email" />

<Button
    android:onClick="@{loginViewModel::onLoginButtonClicked}"
    android:id="@+id/fbtn_login"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:layout_marginTop="64dp"
    android:textColor="@color/colorWhite"
    android:backgroundTint="@color/colorGreenish"
    android:text="Log in"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/edtxt_login_password" />

<TextView
    android:id="@+id/forgetyourpassword"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:clickable="true"
    android:gravity="center"
    android:text="Forgot Password?"
    android:textColor="@color/colorWhite"
    android:textSize="15sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintHorizontal_bias="0.536"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/fbtn_login"
    app:layout_constraintVertical_bias="0.107" />

<ProgressBar
    android:id="@+id/login_frag_loading"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="32dp"
    android:layout_marginTop="64dp"
    android:layout_marginEnd="32dp"
    android:layout_marginBottom="64dp"
    android:visibility="gone"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@+id/edtxt_login_password"
    app:layout_constraintStart_toStartOf="@+id/edtxt_login_password"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>

</layout>